# project_scaffold

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.agents/: agents.md  spec_template.md
.agents/ideas/: README.md
.agents/plans/: README.md
.agents/plans/0 - roadmap/: decision_points.md
.agents/plans/2 - ready/: README.md  generated_monorepo_ci_upgrade_execplan.md  generator_catalog_expansion_execplan.md  pdm_gold_standard_generators_execplan.md  template_repo_hardening_execplan.md
.agents/plans/4 - for_review/: 2026-02-01_adopt_monorepo_publish_gitlab.md  README.md  generated_monorepo_ci_upgrade_execplan.md  generator_catalog_expansion_execplan.md  monorepo_scaffolding_execplan.md  next_milestones.md  next_steps.md  pdm_gold_standard_generators_execplan.md  scaffold_field_notes_hardening_execplan.md  template_repo_hardening_execplan.md
.agents/plans/5 - complete/: README.md
.agents/todos/: README.md  spec_template.md
.agents/user_info/: unimplemented_requests.md  users.md  users_template.md
.github/workflows/: ci.yml
.usertest/: README.md  catalog.yaml
.usertest/missions/: project_scaffold_e2e.mission.md  project_scaffold_smoke.mission.md
.usertest/personas/: project_scaffold_template_operator_data_science.persona.md  project_scaffold_template_operator_research_scientist.persona.md  project_scaffold_template_operator_web_app.persona.md
.usertest/report_schemas/: batch_v1.schema.json  boundary_v1.schema.json  constrained_output_v1.schema.json  project_scaffold_report_v1.schema.json  runbook_v1.schema.json  task_run_v1.schema.json  troubleshoot_v1.schema.json  variants_v1.schema.json
templates/monorepo-root/: cookiecutter.json
tests/: test_scaffold_monorepo_template.py
(+39 files in other folders)
